# scl

./: CMakeLists.txt  README.md  main.cpp  safe_thread.h  sync_send.h  syncronized_value.h  type_traits.h  type_traits.test.cpp
.github/workflows/: test.yaml
include/scl/: CMakeLists.txt  safe_thread.h  send_reflection.h  sync_send.h  synchronized_value.h  syncronized_value.test.cpp  type_traits.test.cpp
include/scl/utils/: CMakeLists.txt  data_race_checker.h  data_race_checker.test.h  fail_data_race_checker.test.cpp  pass_data_race_checker.test.cpp
tests/: CMakeLists.txt  fail_empty_lambda_p.cpp  fail_move_capture_lambda_p.cpp  fail_pod_capture_lambda_p.cpp  fail_pointer.cpp  fail_reference.cpp  fail_reference_capture_lambda.cpp  fail_thread_runner.cpp  fail_thread_runner_lambda.cpp  fail_thread_runner_with_pointer.cpp  pass_copy_reference.cpp  pass_move_reference.cpp  pass_shared_syncronised_string.cpp  pass_thread_runner.cpp
